tests/snapshots/cli_snapshots__balance_all.snap
---
source: tests/cli_snapshots.rs
expression: output
---
          anna     1        evil_machine
                 214.7      €
        bakery    15.09     €
           ben   -50        $
                 -60.752114 BTC
                -100        €
     evil-corp    -1        evil_machine
                 315        €
      good-inc  -820        €
  grocery-shop    11.97     €

          john    50        $
                  60.752114 BTC
                 363.24     €
     john/giro    50        $
                  60.752114 BTC
                  85        €
   john/wallet    66.05     €
