tests/snapshots/cli_snapshots__balance_multi.snap
---
source: tests/cli_snapshots.rs
expression: output
---
         john  212.19     €
    john:giro   50        $
                60.752114 BTC
                -7.64     £
                85        €
  john:wallet   66.05     €


