tests/snapshots/cli_snapshots__balance_owner_override.snap
---
source: tests/cli_snapshots.rs
expression: output
---
  anna    1   evil_machine
        214.7 €
