tests/snapshots/cli_snapshots__balance_tag_company.snap
---
source: tests/cli_snapshots.rs
assertion_line: 62
expression: output
---

       john  -15 €
  john/giro  -15 €
