tests/snapshots/cli_snapshots__entities_sorted.snap
---
source: tests/cli_snapshots.rs
expression: output
---
entities:
  - id: anna
    name: Anna Smith
    tags: [person]
    accounts:
      - {"id":"_default_","commodityMap":[],"balances":[{"utc":"2015-04-02T20:11:45","amounts":[],"commodityMap":[[{"values":["evil_machine"],"tag":"Commodity"},"TODO"],[{"values":["€"],"tag":"Commodity"},"TODO"]]},{"utc":"2017-05-01T12:00:00","amounts":[],"commodityMap":[[{"values":["evil_machine"],"tag":"Commodity"},"TODO"],[{"values":["€"],"tag":"Commodity"},"TODO"]]}]}

  - id: bakery

  - id: ben

  - id: evil-corp
    name: Evil Corporation
    note: The Evil Corporation in the United States of Evil
    tags: [company]
    accounts:
      - {"id":"_default_","commodityMap":[],"balances":[{"utc":"2016-04-02T19:33:28","amounts":[],"commodityMap":[[{"values":["evil_machine"],"tag":"Commodity"},"TODO"],[{"values":["€"],"tag":"Commodity"},"TODO"]]},{"utc":"2017-05-01T12:00:00","amounts":[],"commodityMap":[[{"values":["evil_machine"],"tag":"Commodity"},"TODO"],[{"values":["€"],"tag":"Commodity"},"TODO"]]}]}

  - id: good-inc
    accounts:
      - {"id":"_default_","commodityMap":[],"balances":[{"utc":"2016-11-01T12:00:00","amounts":[],"commodityMap":[[{"values":["€"],"tag":"Commodity"},"TODO"]]},{"utc":"2017-05-01T12:00:00","amounts":[],"commodityMap":[[{"values":["€"],"tag":"Commodity"},"TODO"]]}]}

  - id: grocery-shop

  - id: john
    name: John Doe
    tags: [person]
    accounts:
      - {"id":"_default_","commodityMap":[],"balances":null}
      - {"id":"giro","commodityMap":[],"balances":null}
      - {"id":"visa","commodityMap":[],"balances":[{"utc":"2016-07-22T19:36:57","amounts":[],"commodityMap":[]}]}
      - {"id":"wallet","commodityMap":[],"balances":[{"utc":"2017-05-01T12:00:00","amounts":[],"commodityMap":[[{"values":["€"],"tag":"Commodity"},"TODO"]]},{"utc":"2019-04-02T19:33:28","amounts":[],"commodityMap":[[{"values":["€"],"tag":"Commodity"},"TODO"]]}]}
