tests/snapshots/cli_snapshots__entries.snap
---
source: tests/cli_snapshots.rs
expression: output
---
2015-04-02T20:11:45 anna 0.0 evil_machine
2015-04-02T20:11:45 anna 0.0 €
2016-04-02T19:33:28 evil-corp 0.0 evil_machine
2016-04-02T19:33:28 evil-corp 0.0 €
2016-11-01T12:00:00 good-inc 0.0 €
2016-12-31T12:00:00 anna 500.0 €
2016-12-31T12:00:00 good-inc -500.0 €
2017-02-17T00:00:00 anna -300.0 €
2017-02-17T00:00:00 evil-corp 300.0 €
2017-03-05T00:00:00 anna 1.0 evil_machine
2017-03-05T00:00:00 evil-corp -1.0 evil_machine
2017-05-01T12:00:00 john:wallet 0.0 €
2017-12-24T00:00:00 evil-corp 15.0 €
2017-12-24T00:00:00 john:giro -15.0 €
2018-01-04T17:05:00 anna 33.95 €
2018-01-04T17:05:00 john:wallet -33.95 €
2018-01-05T00:00:00 good-inc -100.0 €
2018-01-05T00:00:00 john:wallet 100.0 €
2018-01-07T00:00:00 ben -100.0 €
2018-01-07T00:00:00 ben -50.0 $
2018-01-07T00:00:00 john:giro 100.0 €
2018-01-07T00:00:00 john:giro 50.0 $
2018-03-07T00:00:00 ben -0.434114 BTC
2018-03-07T00:00:00 john:giro 0.434114 BTC
2018-03-12T00:00:00 ben -60.318 BTC
2018-03-12T00:00:00 john:giro 60.318 BTC
2018-07-05T17:13:00 anna -11.97 €
2018-07-05T17:13:00 grocery-shop 11.97 €
2018-12-30T14:00:00 anna 220.0 €
2018-12-30T14:00:00 good-inc -220.0 €
2019-03-14T08:43:00 anna -7.29 €
2019-03-14T08:43:00 bakery 7.29 €
2019-04-24T23:43:00 anna -219.99 €
2019-04-24T23:43:00 john 219.99 €
2020-01-06T12:17:00 bakery 7.8 €
2020-01-06T12:17:00 john -7.8 €

