tests/snapshots/cli_snapshots__ledger_entries.snap
---
source: tests/cli_snapshots.rs
expression: output
---
2016-12-31 Salary
  anna  500 €
  good-inc

2017-04-22
  evil-corp  300 €
  anna

2017-04-22
  anna  1 evil_machine
  evil-corp

2017-12-24 Money for evil deal
  evil-corp  15 €
  john:giro

2018-01-04 Christmas Gifts
  anna  33.95 €
  john:wallet

2018-01-05
  john:wallet  100 €
  good-inc

2018-01-07 Financial support
  john:giro  100 €
  ben

2018-01-07 Financial support in Dollar
  john:giro  50 $
  ben

2018-03-07 Financial support in Bitcoin
  john:giro  0.434114 BTC
  ben

2018-03-12 More financial support in Bitcoin
  john:giro  60.318 BTC
  ben

2018-07-05 Food
  grocery-shop  11.97 €
  anna

2018-12-30 End of year bonus
  anna  220 €
  good-inc

2019-03-14 Yummy bread
  bakery  7.29 €
  anna

2019-04-24 Bicycle
  john  219.99 €
  anna

2020-01-06 Pizza
  bakery  7.8 €
  john


